# Attention_CV

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  clean.py  clear-dev-data.js  clear-localStorage.js  main.py  package-lock.json  package.json  pyproject.toml  run.py  start.bat  start.sh
backend/app/: .env.example  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: chat.py  config.py  git.py  github.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py
backend/app/services/ai/: __init__.py  ai_service.py  supervisor.py
backend/app/services/data/: __init__.py  document_service.py  memory_service.py
backend/app/services/tools/: __init__.py  code_analyzer.py  git_service.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat-editor/: page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/components/: Chat.tsx  ChatInterface.tsx  CodeDiffViewer.tsx  CodeEditor.tsx  ConfigDialog.tsx  ConfigPanel.tsx  DiffView.tsx  FilePreview.tsx  LivePreviewPanel.tsx  SplashCursor.tsx  Squares.tsx
frontend/src/components/ui/: animated-background.tsx  animated-card.tsx  blur-text.tsx  circular-text.tsx  count-up.tsx  fade-content.tsx  floating-label-input.tsx  gradient-text.tsx  live-clock.tsx  pulse-button.tsx  shiny-text.tsx  toast-fade.tsx  toast.tsx  typewriter-text.tsx  vendor-logos.tsx
frontend/src/lib/: api.ts
frontend/src/types/: chat.ts  index.ts
frontend/src/utils/: codeUpdater.ts
